<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.example.alex.nasapp.ui.asteroid.AsteroidListFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:id="@+id/relativeLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinner"
        android:layout_alignParentTop="true"
        android:textSize="18sp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <Button
        android:id="@+id/sendAlertSMSButton"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        android:text="@string/send_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/asteroidRecyclerView"
        android:layout_below="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

</RelativeLayout>
