<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/featureImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        android:contentDescription="@string/feature_image"/>

    <TextView
        android:id="@+id/featureNameTextView"
        android:gravity="center_horizontal"
        android:textColor="#80ebf0eb"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp">

        <Button
            android:id="@+id/infoButton"
            android:text="@string/info"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:id="@+id/startButton"
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>



</RelativeLayout>