<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/roverRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/createPostcardButton"
        android:text="@string/create_postcard"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </RelativeLayout>

