...
            android:layout_height="wrap_content">
        </Spinner>

    </LinearLayout>

       <EditText
           android:id="@+id/postCardEditText"
           android:hint="@string/postcard_hint"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/submitButton"
            android:text="@string/send_postcard"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>
