<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:id="@+id/rootLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.alex.nasapp.ui.eye_in_the_sky.SelectLatLongFragment">

    <FrameLayout android:id="@+id/mapContainer"
              android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="1"
              tools:context="com.example.alex.nasapp.ui.NasaActivity"/>

    <EditText
        android:layout_marginTop="5dp"
        android:id="@+id/latEditText"
        android:hint="@string/latitude"
        android:inputType="numberSigned|numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="5dp"
        android:id="@+id/longEditText"
        android:hint="@string/longitude"
        android:inputType="numberSigned|numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/showImageButton"
        android:enabled="false"
        android:text="@string/get_photo_from_satellite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
